--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "@vueuse/motion": "^3.0.3",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "vue": "^3.5.13",
