--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "motion": "^12.23.6",
     "vue": "^3.5.13",
     "vue-sweetalert2": "^5.0.11",
     "vuetify": "^3.8.1"
