--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "motion": "^12.23.6",
     "vue": "^3.5.13",
     "vue-sweetalert2": "^5.0.11",
-    "vuetify": "^3.8.1"
+    "vuetify": "^3.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
