--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mdi/font": "7.4.47",
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "motion": "^12.23.6",
     "vue": "^3.5.13",
+    "vue-chartjs": "^3.1.1",
     "vue-sweetalert2": "^5.0.11",
     "vuetify": "^3.8.1",
     "xlsx": "^0.18.5"
